# academy_infotecs

./: CMakeLists.txt  README
prog1/: Makefile  main.hh  sender.cc  sender.hh  sockethandler.cc  sockethandler.hh  start.cc
prog2/: Makefile  receiver.cc  receiver.hh  start.cc
